src/WebsiteEditor/wwwroot/WebsiteEditor/css/websiteeditor.css
html {
    padding: 0px;
    margin: 0px;
    height: 100%;
    min-height: 100%;
}

body {
    background-color: #fafafa;
    min-height: 100%;
    height: 100%;
    padding: 0px;
    margin: 0px;
}

.website-top-menu-panel {
    background-color: #303030;
    color: #CCCCCC;
    min-height: 40px;
}

.website-top-menu {
    display: flex;
    list-style-type: none;
    padding: 0;
    margin: 0;
    overflow: auto;
}

.website-nav-surface-name {
    display: block;
    padding: 5px 20px;
    color: white;
    pointer-events: none;
}

.website-nav-link {
    display: block;
    padding: 5px 20px;
    text-decoration: none;
    color: white;
}

.website-nav-link:hover {
    background-color: #333333;
    color: white;
}

.website-body {
    background-color: white;
    min-height: 100%;
    width: 90%;
    margin: auto;
    box-sizing: border-box;
    padding: 60px 50px 20px 50px;
}

.website-table__cell-input {
    padding: 2px 8px;
}

.website-table__cell-index {
    width: 50px;
}

.website-table__cell-key {
    width: 80px;
}

.website-table__cell-protected {
    text-align: center;
    width: 80px;
}

.website-table__cell-actions {
    width: 150px;
}

.website-table__label {
    font-size: 16px;
}

.website-surface-groups-surface {
    color: #333;
    background-color: #D3D3D3;
    border-color: #ccc;
    display: inline-block;
    padding: 6px 12px;
    margin-bottom: 0;
    font-size: 14px;
    font-weight: 400;
    line-height: 1.42857143;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    -ms-touch-action: manipulation;
    touch-action: manipulation;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-image: none;
    border: 1px solid transparent;
    border-radius: 4px;
}

.website-surface-groups-surface:hover {
    background-color: #F3F3F3;
    text-decoration: none;
}

.website-surface-groups-add {
    width: 30px;
    height: 30px;
    text-align: center;
    padding: 6px 0;
    font-size: 12px;
    line-height: 1.428571429;
    border-radius: 15px;
}

.website-select {
    padding-right: 20px;
}

.website-no-pointer-events {
    pointer-events: none;
}

.website-pinning-rule-add {
    padding-bottom: 5px;
}

.website-surface-group-name {
    font-weight: bold;
}

.website-pinning-rule-order {
    max-width: 40px;
}

.website-general-section {
    padding-top: 40px;
}

.website-pin-uri-input {
    width: 100%;
}

.website-blending-point-delete {
    position: relative;
    left: 10em;
}

.website-catching-rules-final-note {
    font-size: smaller;
    color: gray;
}

.website-catching-rules-buttons {
    display: flex;
    padding-top: 20px;
}

.website-catching-rules-buttons__add {
    padding-bottom: 5px;
}

.website-catching-rules-buttons__delete {
    margin-left: auto;
}

.website-catching-rules-catch-uri-section {
    padding-bottom: 5px;
}

.website-catching-rules-table-header {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    width: 40%;
}

.website-catching-rules-table-header-uri {
    flex: 1 0 auto;
    display: flex;
    align-items: flex-start;
}

.website-catching-rules-table-header__nestable {
    font-weight: bold;
}

.website-catching-rules-table-header-uri__uri {
    width: 30%;
}

.website-catching-rules-table-header-uri__label {
    margin-right: 1em;
}

.website-catching-rules-table-header-delete {
    padding-bottom: 5px;
    margin-left: 10em;
}

.website-catching-rules-table-header-headers-summary {
    flex: 0 1 auto;
    pointer-events: none;
    margin: 0 2em 0 3em;
}

